tests/errors/abstract_footprint.nm
abstract component Main {
    footprint = "asdf";
}